[package]
name = "c2_windows_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking", "cookies"] }
tokio = { version = "1", features = ["full"] }
time = "0.3.35"

